--- a/references.html
+++ b/references.html
@@ -63,6 +63,8 @@ body {font-size:16px;}
 <ul>  
 <li>Ts. Mohd Zafian Bin Mohd Zawawi</li>
 <li>Basic Web Design And Content Management Lecturer UiTM Kelantan, Kota Bharu Campus.</li>
+<li>+60 12 808 8040</li>
+<li><a href="mailto:zaffian@uitm.edu.my">zaffian@uitm.edu.my</a>
 </p>
 </div>
 <div class="w3-container w3-padding-large" style="margin-bottom:32px">
